# codingup-evaluator

./: .gitignore  Makefile  README.md  labs.db  pyproject.toml  run.sh  setup.cfg
evaluator/: __meta__.py  app.py
evaluator/resources/config/default/: app.yaml
evaluator/resources/config/profiles/: default.yaml  luis.yaml  luis2.yaml
evaluator/resources/database/: default.db
evaluator/resources/databases/: default.db
evaluator/resources/logotypes/: softserve  teck
evaluator/resources/sqls/: 001.teachers.sql
evaluator/src/common/: cipher.py  constants.py  database.py  notifications.py  parameters.py  utilities.py
evaluator/src/dao/: teachers.py
evaluator/src/internal/: database.py  init.py  lists.py  loader.py  texts.py
evaluator/src/models/: loader.py
tests/: PYLVL1A_R11_E4_P16 ES.ipynb  PYLVL1A_R11_E4_P16_ES.ipynb
